# aicooking-ble

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  labels.yml  publish.yml  release-please.yml
docs/: conf.py  index.md  installation.md  usage.md
src/aicooking_ble/: __init__.py  parser.py
tests/: test_main.py  test_parser.py
