[project]
name = "aicooking-ble"
version = "0.3.0"
description = "Manage Aicooking BLE devices"
authors = [{ name = "Tomáš Lipovský", email = "tomas@lipovo.cz" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["classifiers", "dependencies"]

[project.urls]
"Repository" = "https://github.com/lipov3cz3k/aicooking-ble"
"Documentation" = "https://aicooking-ble.readthedocs.io"
"Bug Tracker" = "https://github.com/lipov3cz3k/aicooking-ble/issues"
"Changelog" = "https://github.com/lipov3cz3k/aicooking-ble/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "aicooking_ble", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
bluetooth-sensor-state-data = ">=1.8.0"
sensor-state-data = ">=2.2.0"
home-assistant-bluetooth = ">=1.3.0"
bluetooth-data-tools = ">=1.28.0"

# Documentation Dependencies
Sphinx = {version = ">=9.0.4,<10", optional = true}
sphinx-rtd-theme = {version = ">=1,<4", optional = true}
myst-parser = {version = ">=5.1.0,<5.2", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-cov = ">=5,<7"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=aicooking_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # ruff-specific
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "D203", # One blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.isort]
known-first-party = ["aicooking_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
